syntax = "proto3";

package buildbarn.configuration.bb_asset_hub;

import "pkg/proto/configuration/blobstore/blobstore.proto";
import "pkg/proto/configuration/global/global.proto";
import "pkg/proto/configuration/grpc/grpc.proto";
import "pkg/proto/configuration/bb_asset_hub/fetch/fetcher.proto";

option go_package = "github.com/buildbarn/bb-asset-hub/pkg/proto/configuration/bb_asset_hub";

message ApplicationConfiguration {
  // Asset store configuration for the Fetch and Push servers
  buildbarn.configuration.blobstore.BlobAccessConfiguration asset_store = 1;

  // Address on which to listen to expose the web UI and Prometheus
  // metrics.
  string http_listen_address = 2;

  // gRPC servers to spawn to listen for remote asset API connections
  repeated buildbarn.configuration.grpc.ServerConfiguration
      grpc_servers = 3;

  reserved 4; // Used to be used for content addressable storage

  // Maximum Protobuf message size to unmarshal.
  int64 maximum_message_size_bytes = 5;

  // Common configuration options that apply to all Buildbarn binaries.
  buildbarn.configuration.global.Configuration global = 6;

  // List of instances which can upload to the Cache.
  repeated string allow_updates_for_instances = 7;

  // Configuration for remote asset FetchServer
  buildbarn.configuration.bb_asset_hub.fetch.FetcherConfiguration fetcher = 8;
}
